# qb-port-sync

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PKGBUILD  README.md  install.sh
.github/workflows/: ci.yml
Formula/: qb-port-sync.rb
config/: config.example.toml
launchd/: com.example.qb-port-sync.plist
src/: config.rs  error.rs  lib.rs  main.rs  metrics_server.rs  qbit.rs  report.rs  watch.rs
src/portmap/: mod.rs  natpmp.rs  pcp.rs
systemd/: qb-port-sync-oneshot.service  qb-port-sync.path  qb-port-sync.service
tests/: json_output.rs  smoke.rs
