[package]
name = "qb-port-sync"
version = "0.1.0"
edition = "2021"
authors = ["qb-port-sync maintainers"]
license = "MIT"
description = "Keeps qBittorrent's listening port synchronized with ProtonVPN forwarded ports using file watching and PCP/NAT-PMP."
homepage = "https://github.com/example/qb-port-sync"
repository = "https://github.com/example/qb-port-sync"
keywords = ["qbittorrent", "protonvpn", "port-forwarding", "daemon"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"
default-net = "0.8"
crab_nat = "0.1"
users = "0.11"
rand = { version = "0.8", features = ["std", "small_rng"] }

[dev-dependencies]
tempfile = "3"
