[package]
name = "qb-port-sync"
version = "0.1.0"
edition = "2021"
authors = ["qb-port-sync maintainers"]
license = "MIT"
description = "Keeps qBittorrent's listening port synchronized with ProtonVPN forwarded ports using file watching and PCP/NAT-PMP."
homepage = "https://github.com/MFJG-dev/qb-port-sync"
repository = "https://github.com/MFJG-dev/qb-port-sync"
keywords = ["qbittorrent", "protonvpn", "port-forwarding", "daemon"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"
default-net = "0.8"
natpmp = "0.5"
users = "0.11"
rand = { version = "0.8", features = ["std", "small_rng"] }
serde_with = "3"
tracing-journald = { version = "0.3", optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.17", features = ["http-listener"], optional = true }
hyper = { version = "1.1", features = ["server", "http1"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }

[dependencies.crab_nat]
version = "0.7"
optional = true

[features]
default = []
pcp = ["crab_nat"]
journald = ["tracing-journald"]
metrics = ["dep:metrics", "metrics-exporter-prometheus", "hyper", "http-body-util", "hyper-util"]

[dev-dependencies]
tempfile = "3"
serde_json = "1"
